--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "husky",
+    "test": "npm run lint && npm run type-check",
+    "verify": "npm run lint:fix && npm run format && npm run type-check"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
+    "*.{json,css}": ["prettier --write"]
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -34,6 +41,8 @@
     "eslint-config-next": "15.4.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
