feat: OAuth 인증 시스템 구현 및 커뮤니티 플랫폼 스키마 적용
- GitHub, Google, Kakao OAuth 로그인 구현
- NextAuth.js v5 설정 및 Prisma 어댑터 연동
- 메인 사이트와 커뮤니티 분리된 스키마 구조 적용
- 사용자 역할 시스템 (USER, MANAGER, ADMIN) 구현
- 로그인 페이지 및 메인 페이지 인증 상태 표시
- 시드 데이터로 초기 카테고리, 태그, 사용자 생성

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,21 +38,22 @@ jobs:
       - name: Build project
         run: npm run build
 
-  deploy-preview:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+  # Vercel 배포는 자동 배포 사용으로 비활성화
+  # deploy-preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'pull_request'
+  #   
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     
+  #     - name: Install Vercel CLI
+  #       run: npm install --global vercel@latest
+  #       
+  #     - name: Pull Vercel Environment Information  
+  #       run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+  #       
+  #     - name: Build Project Artifacts
+  #       run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+  #       
+  #     - name: Deploy Project Artifacts to Vercel
+  #       run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
