--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.0",
     "@prisma/client": "^6.12.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tanstack/react-query": "^5.83.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
@@ -38,11 +43,13 @@
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
     "zod": "^4.0.10",
