--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
