--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,71 +6,16 @@ on:
   pull_request:
     branches: [main]
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
-  lint-and-format:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run ESLint with auto-fix
-        run: npm run lint:fix
-        continue-on-error: true
-
-      - name: Run Prettier format
-        run: npm run format
-
-      - name: Check for changes
-        id: verify-changed-files
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Commit changes
-        if: steps.verify-changed-files.outputs.changed == 'true' && github.event_name == 'push'
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add -A
-          git commit -m "fix: 자동 코드 포맷팅 적용 [skip ci]"
-
-      - name: Push changes
-        if: steps.verify-changed-files.outputs.changed == 'true' && github.event_name == 'push'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
-
   test:
-    needs: lint-and-format
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.ref }}
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -81,11 +26,28 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run linter
+        run: |
+          echo "Running ESLint..."
+          npm run lint:fix
+          echo "ESLint completed"
+
+      - name: Run formatter
+        run: |
+          echo "Running Prettier..."
+          npm run format
+          echo "Prettier completed"
+
       - name: Run TypeScript check
-        run: npm run type-check
+        run: |
+          echo "Running TypeScript check..."
+          npm run type-check
+          echo "TypeScript check completed"
 
       - name: Build project
-        run: npm run build
+        run: |
+          echo "Building project..."
+          npm run build
         env:
           SKIP_ENV_VALIDATION: true
           NEXTAUTH_URL: http://localhost:3000
