--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,48 +7,115 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  # 코드 품질 검사
+  quality:
+    name: Code Quality
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '20.x'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linter
-        run: |
-          echo "Running ESLint..."
-          npm run lint:fix
-          echo "ESLint completed"
+      - name: Run ESLint
+        run: npm run lint
+        continue-on-error: false
 
-      - name: Run formatter
-        run: |
-          echo "Running Prettier..."
-          npm run format
-          echo "Prettier completed"
+      - name: Run Prettier Check
+        run: npm run format:check
+        continue-on-error: false
 
-      - name: Run TypeScript check
-        run: |
-          echo "Running TypeScript check..."
-          npm run type-check
-          echo "TypeScript check completed"
+      - name: Run TypeScript Check
+        run: npm run type-check
+        continue-on-error: false
+
+  # 빌드 및 테스트
+  build:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    needs: quality
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build project
-        run: |
-          echo "Building project..."
-          npm run build
+        run: npm run build
         env:
           SKIP_ENV_VALIDATION: true
           NEXTAUTH_URL: http://localhost:3000
-          NEXTAUTH_SECRET: test-secret
+          NEXTAUTH_SECRET: test-secret-for-ci
+          DATABASE_URL: postgresql://test:test@localhost:5432/test
+
+      # 테스트 추가 예정
+      # - name: Run tests
+      #   run: npm test
+      #   env:
+      #     CI: true
+
+  # 자동 포맷팅 (main 브랜치 push 시에만)
+  auto-format:
+    name: Auto Format
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: build
+    permissions:
+      contents: write
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run auto-fix
+        run: |
+          npm run lint:fix
+          npm run format
+
+      - name: Check for changes
+        id: check-changes
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "has-changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "has-changes=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit and push changes
+        if: steps.check-changes.outputs.has-changes == 'true'
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+          git commit -m "fix: 자동 코드 포맷팅 적용 [skip ci]"
+          git push
