--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,68 @@ on:
     branches: [main]
 
 jobs:
-  # 코드 품질 검사
-  quality:
-    name: Code Quality
+  # 자동 포맷팅 및 수정 (PR에서만)
+  auto-fix:
+    name: Auto Fix Code
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.head_ref }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Auto fix all issues
+        run: |
+          echo "🔧 자동 수정 시작..."
+          npm run lint:fix || true
+          npm run format || true
+          echo "✅ 자동 수정 완료!"
+
+      - name: Check if there are changes
+        id: verify-changed-files
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit and push changes
+        if: steps.verify-changed-files.outputs.changed == 'true'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A
+          git commit -m "🤖 자동 코드 포맷팅 및 린트 수정"
+          git push
+
+  # 코드 품질 검사 (자동 수정 후)
+  quality:
+    name: Code Quality Check
+    runs-on: ubuntu-latest
+    needs: [auto-fix]
+    if: always()
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -29,25 +81,25 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
-        continue-on-error: false
 
       - name: Run Prettier Check
         run: npm run format:check
-        continue-on-error: false
 
       - name: Run TypeScript Check
         run: npm run type-check
-        continue-on-error: false
 
   # 빌드 및 테스트
   build:
     name: Build and Test
     runs-on: ubuntu-latest
     needs: quality
+    if: always() && (needs.quality.result == 'success' || needs.quality.result == 'skipped')
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -66,56 +118,19 @@ jobs:
           NEXTAUTH_SECRET: test-secret-for-ci
           DATABASE_URL: postgresql://test:test@localhost:5432/test
 
-      # 테스트 추가 예정
-      # - name: Run tests
-      #   run: npm test
-      #   env:
-      #     CI: true
-
-  # 자동 포맷팅 (main 브랜치 push 시에만)
-  auto-format:
-    name: Auto Format
+  # CI 상태 리포트
+  status:
+    name: CI Status
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: build
-    permissions:
-      contents: write
+    needs: [quality, build]
+    if: always()
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run auto-fix
+      - name: Report status
         run: |
-          npm run lint:fix
-          npm run format
-
-      - name: Check for changes
-        id: check-changes
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "has-changes=true" >> $GITHUB_OUTPUT
+          if [ "${{ needs.quality.result }}" == "success" ] && [ "${{ needs.build.result }}" == "success" ]; then
+            echo "✅ CI 성공! 모든 검사를 통과했습니다."
           else
-            echo "has-changes=false" >> $GITHUB_OUTPUT
+            echo "❌ CI 실패! 코드를 확인해주세요."
+            exit 1
           fi
-
-      - name: Commit and push changes
-        if: steps.check-changes.outputs.has-changes == 'true'
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add -A
-          git commit -m "fix: 자동 코드 포맷팅 적용 [skip ci]"
-          git push
