--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -12,6 +12,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky",
+    "postinstall": "prisma generate",
     "test": "npm run lint && npm run type-check",
     "verify": "npm run lint:fix && npm run format && npm run type-check",
     "db:generate": "prisma generate",
