--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
     "db:seed": "dotenv -e .env -- tsx prisma/seed.ts",
     "db:test": "dotenv -e .env -- tsx test-db.ts"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.0",
