--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
+    "uuid": "^11.1.0",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
   },
