--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
