fix: Server Component에서 ssr:false 오류 수정 및 ESLint 오류 해결
- app/page.tsx에서 ssr: false 옵션 제거 (Server Component 호환성)
- next.config.ts에서 require를 import로 변경 (ESLint 규칙 준수)
- 불필요한 useApiMutation.ts 파일 삭제 (React Query로 완전 마이그레이션)
- ENHANCEMENT.md 업데이트: 완료된 작업 정리 및 우선순위 재정렬

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@sentry/nextjs": "^10.0.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/marked": "^5.0.2",
     "@vercel/analytics": "^1.5.0",
@@ -89,6 +90,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.9.0",
+    "@next/bundle-analyzer": "^15.4.5",
     "@playwright/test": "^1.54.1",
     "@tailwindcss/postcss": "^4",
     "@types/ioredis": "^4.28.10",
@@ -98,6 +100,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "cross-env": "^10.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.32.0",
     "eslint-config-next": "15.4.4",
