fix: CI 빌드 에러 수정 및 이미지 blur placeholder 시작
- Redis 빌드 타임 에러 해결 (REDIS_URL 없을 때 dummy client 반환)
- CI workflow에 REDIS_URL 환경변수 추가
- 이미지 blur placeholder 유틸리티 생성
- ActiveCommunities 컴포넌트에 blur 효과 적용

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,7 @@ jobs:
           NEXTAUTH_URL: http://localhost:3000
           NEXTAUTH_SECRET: test-secret-for-ci
           DATABASE_URL: postgresql://test:test@localhost:5432/test
+          REDIS_URL: redis://localhost:6379
 
   # CI 상태 리포트
   status:
