--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:3001": "next dev -p 3001",
-    "dev:3002": "next dev -p 3002",
+    "dev": "next dev --turbo",
+    "dev:slow": "next dev",
+    "dev:3001": "next dev -p 3001 --turbo",
+    "dev:3002": "next dev -p 3002 --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
