--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@playwright/test": "^1.54.1",
     "@tailwindcss/postcss": "^4",
     "@types/ioredis": "^4.28.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
