--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.9",
     "ioredis": "^5.7.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.526.0",
     "marked": "^16.1.1",
     "next": "15.4.4",
