--- a/package.json
+++ b/package.json
@@ -58,11 +58,16 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@sentry/nextjs": "^10.0.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tiptap/extension-image": "^3.0.9",
+    "@tiptap/extension-placeholder": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "@types/marked": "^5.0.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
