perf: Vercel 메모리 사용량 및 타임아웃 최적화
- SSE 함수 타임아웃 5분으로 연장 (vercel.json)
- 연결 수 제한 (사용자당 3개, 채널당 100개)
- Heartbeat 간격 30초→2분 (75% 메모리 절약)
- 비활성 연결 자동 정리 시스템 추가
- Connection pool 및 cleanup 함수 구현

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/cleanup-images",
-      "schedule": "0 3 * * *"
+  "functions": {
+    "app/api/chat/channels/[channelId]/events/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/notifications/sse/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/**/route.ts": {
+      "maxDuration": 30
     }
-  ]
+  },
+  "regions": ["icn1"]
 }
