--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "type-check": "tsc --noEmit",
     "prepare": "husky",
     "postinstall": "prisma generate",
-    "test": "npm run lint && npm run type-check",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:all": "npm run lint && npm run type-check && npm run test:run",
     "verify": "npm run lint:fix && npm run format && npm run type-check",
     "prisma:validate": "prisma validate && prisma format --check",
     "check:all": "npm run prisma:validate && npm run type-check && npm run lint",
@@ -96,7 +100,7 @@
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
     "uuid": "^11.1.0",
-    "zod": "^4.0.10",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -105,6 +109,8 @@
     "@next/bundle-analyzer": "^15.4.5",
     "@playwright/test": "^1.54.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/ioredis": "^4.28.10",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
@@ -113,6 +119,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "cross-env": "^10.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.32.0",
@@ -121,12 +128,14 @@
     "eslint-plugin-prettier": "^5.5.3",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
     "micromatch": "^4.0.8",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
