feat: 이미지 최적화 및 보안 강화 구현
- 이미지 자동 리사이징 및 WebP 변환 (Sharp 라이브러리)
- 썸네일 자동 생성 (200x200)
- 이미지 메타데이터 저장 (크기, 압축률 등)
- 세션 만료 시간 설정 (30일 기본, 24시간마다 갱신)
- 세션 만료 경고 알림 UI
- Rate limiting 개선 (관리자 10-20배 높은 한도)
- 파일 해시 기반 중복 체크
- Prisma 스키마 업데이트 (metadata, hash 필드 추가)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "test:coverage": "vitest run --coverage",
     "test:all": "npm run lint && npm run type-check && npm run test:run",
     "verify": "npm run lint:fix && npm run format && npm run type-check",
+    "check:production": "tsx scripts/check-production-ready.ts",
+    "precommit": "npm run verify",
     "prisma:validate": "prisma validate && prisma format --check",
     "check:all": "npm run prisma:validate && npm run type-check && npm run lint",
     "db:generate": "prisma generate",
@@ -68,6 +70,7 @@
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "@types/marked": "^5.0.2",
+    "@types/sharp": "^0.31.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "@vercel/kv": "^3.0.0",
@@ -97,6 +100,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
