--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
+    "highlight.js": "^11.11.1",
     "ioredis": "^5.7.0",
+    "isomorphic-dompurify": "^2.26.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.526.0",
     "marked": "^16.1.1",
@@ -99,6 +101,10 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.3",
     "sonner": "^2.0.6",
