--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
     {
       "path": "/api/ai/qa-bot",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/files/cleanup",
+      "schedule": "0 2 * * *"
     }
   ]
 }
