feat: Supabase 마이그레이션 완료 및 안정성 개선
- Neon에서 Supabase로 데이터베이스 이전 완료
- Prisma 클라이언트 프로덕션 안정성 강화
- DATABASE_URL 환경변수 검증 개선
- 마이그레이션 임시 파일 정리
- 타입 안정성 개선

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
   "tailwindCSS.experimental.classRegex": [
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
     ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
-  ]
+  ],
+  "kiroAgent.configureMCP": "Disabled"
 }
