--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "@types/marked": "^5.0.2",
+    "@types/pg": "^8.15.5",
     "@types/sharp": "^0.31.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
@@ -92,6 +93,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
+    "pg": "^8.16.3",
     "rate-limiter-flexible": "^7.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
