fix: AI 댓글 생성 타임아웃 문제 해결 - Vercel 함수 타임아웃 180초로 증가

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
       "maxDuration": 300
     },
     "app/api/ai/qa-bot/route.ts": {
-      "maxDuration": 60
+      "maxDuration": 180
+    },
+    "app/api/main/posts/route.ts": {
+      "maxDuration": 180
     },
     "app/api/**/route.ts": {
       "maxDuration": 30
